# NetGardeClient

./: .env.example  .gitignore  Makefile  README.md  client.example.conf  netgarde-gui.spec  netgarde-wg.spec  pyproject.toml  trustedge-gui.spec  trustedge-wg.spec
.github/workflows/: build-macos.yml  test.yml
docs/: BUILD.md  CLI.md
docs/images/: README.md
examples/: client.example.conf
netgarde_wg/: __init__.py  __main__.py  cli.py  constants.py  paths.py
netgarde_wg/agent/: __init__.py  state.py
netgarde_wg/app/: __init__.py  main.py
netgarde_wg/enroll/: __init__.py  api.py  public_ip.py
netgarde_wg/gui/: __init__.py  __main__.py  app.py  connection_panel.py  connection_view.py  icons.py  privileged.py  settings.py  tunnel_session.py
netgarde_wg/platform/: __init__.py  hostmeta.py
netgarde_wg/wireguard/: __init__.py  config.py  dns_defaults.py  monitor.py  stats.py  tunnel.py  uapi.py
packaging/: trustedge-gui.spec  trustedge-wg.spec
scripts/: build-macos.sh
server/: README.md  dnsmasq-wireguard.conf  setup-dnsmasq.sh  setup-nat.sh  watch-traffic.sh
tests/: conftest.py  helpers.py  test_agent_state.py  test_app_main.py  test_bundled.py  test_cli.py  test_config.py  test_connection_view.py  test_dns_defaults.py  test_enroll_api.py  test_enroll_http.py  test_env.py  test_example_conf.py  test_gui_paths.py  test_gui_settings.py  test_keys.py  test_log_reader.py  test_monitor.py  test_paths.py  test_platform.py  test_privileged.py  test_public_ip.py  test_stats.py  test_trust_ca.py  test_tunnel.py  test_tunnel_session.py  test_uapi.py
trustedge_wg/: __init__.py  __main__.py  cli.py  constants.py  env.py  paths.py
trustedge_wg/agent/: state.py
trustedge_wg/app/: main.py
trustedge_wg/enroll/: api.py  public_ip.py
trustedge_wg/gui/: __init__.py  __main__.py  app.py  connection_panel.py  connection_view.py  icons.py  log_reader.py  privileged.py  settings.py  tunnel_session.py
trustedge_wg/platform/: bundled.py
trustedge_wg/wireguard/: config.py  dns_defaults.py  keys.py  (+5 more)
(+14 files in other folders)
