[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netgarde-wg"
version = "0.1.0"
description = "NetGarde userspace WireGuard client (Python)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42.0.0",
]

[project.scripts]
netgarde-wg = "netgarde_wg.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["netgarde_wg*"]

[tool.setuptools.package-data]
netgarde_wg = ["py.typed"]
