[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trustedge-wg"
version = "0.1.0"
description = "TrustEdge userspace WireGuard client (Python)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0.0", "pytest>=8.0"]
gui = ["rumps>=0.4.0; sys_platform == 'darwin'"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
trustedge-wg = "trustedge_wg.__main__:main"
trustedge-wg-gui = "trustedge_wg.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trustedge_wg*"]

[tool.setuptools.package-data]
trustedge_wg = ["py.typed", "gui/assets/*.png"]
